welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: not found: value m
	while (m != a) {
               ^Array2:8: error: not found: value m
	m=m+1
        ^Array2:10: error: not found: value m
	m=0
        ^